internal/xds/translator/testdata/out/xds-ir/authn-single-route-single-match.routes.yaml
- name: first-listener
  responseHeadersToAdd:
  - append: false
    header:
      key: x-request-id
      value: '%REQ(X-REQUEST-ID)%'
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: first-route
